trunk/Archive2/14/9d3be56f24b88d/output
main.cpp:25:5: error: no matching function for call to 'serialize'
    serialize(v, boost::make_function_output_iterator([&octets](char) { ++octets; }));
    ^~~~~~~~~
main.cpp:34:39: note: in instantiation of function template specialization 'serialized_size<boost::variant<int, double, boost::array<char, 42>, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_> >' requested here
    std::cout << "With int:      " << serialized_size(V(0)) << "\n";
                                      ^
main.cpp:18:6: note: candidate function [with Variant = boost::variant<int, double, boost::array<char, 42>, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_, boost::detail::variant::void_>, Out = boost::function_output_iterator<(lambda at main.cpp:25:55)>] not viable: expects an l-value for 2nd argument
void serialize(Variant const& v, Out& into) {
     ^
1 error generated.
